# github-action-test

./: Dockerfile  main.py  pyproject.toml
.github/workflows/: gcr-push.yml
