[tool.poetry]
name = "1_fastapi"
version = "0.1.0"
description = ""
authors = ["bbiyak <bbiyak@socar.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.82.0"
SQLAlchemy = "^1.4.41"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
